# qtMultiplayerDemo

./: .gitignore  CLAUDE.md  PLAN.md  README.md  index.html
client/: CMakeLists.txt  CounterClient.cpp  CounterClient.h  main.cpp  main.qml  wasm_shell.html
server/: package-lock.json  package.json  wrangler.toml
server/src/: index.ts
